--- a/index.html
+++ b/index.html
@@ -610,8 +610,8 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="1000">0</strong>
-                <span>Mentored Students</span>
+                <strong class="number" data-number="100+">0</strong>
+                <span>Certificates</span>
               </div>
             </div>
           </div>
