--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="100">0</strong> <span>+</span>
+                <strong class="number" data-number="100">0 <span>+</span></strong>
                 <span>Certificates</span>
               </div>
             </div>
