--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
 			<div class="col-md-12 text-center">
   
 			  <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-	Copyright @ <a href="https://abhaykumar.github.com" target="_blank">ABHAY KUMAR</a> <!-- &copy;<script>document.write(new Date().getFullYear());</script> abhaykumar.github.com | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://www.infofriendly.com" target="_blank">INFOFRIENDLY</a> -->
+	Copyright @ <a href="https://meabhaykr.github.com" target="_blank">ABHAY KUMAR</a> <!-- &copy;<script>document.write(new Date().getFullYear());</script> abhaykumar.github.com | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://www.infofriendly.com" target="_blank">INFOFRIENDLY</a> -->
 	<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 			</div>
 		  </div>
