--- a/index.html
+++ b/index.html
@@ -306,16 +306,18 @@
 		</div>
     </section>
 
-
-
-	
     <section class="ftco-section ftco-no-pb" id="resume-section">
     	<div class="container">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-			<p>Update Soon</p>
+			<p><a href="https://drive.google.com/drive/folders/13mQkpU_aC25bbgiUfrAayoRl0_kzW0ty?usp=sharing">DOWNLOAD</a></p>
+
+
+			<!-- <p>Update Soon</p> -->
+
+
             <!-- <p>Seasoned Senior Data Analyst with 5+ years of experience driving business strategies through data-driven insights. Proven expertise in data science, statistical analysis, machine learning algorithms and project management.</p> -->
           </div>
         </div>
@@ -510,8 +512,8 @@
 			</a>
 			<div class="text mt-3 float-right d-block">
 
-			  <h3 class="heading"><a href="https://github.com/meabhaykr/EDA-Hotel-Booking-Analysis">EDA - Hotel Booking Analysis</a></h3>
-			  <p>Explore hotel booking trends, preferences, and factors influencing bookings through thorough EDA and visualizations.</p>
+			  <h3 class="heading"><a href="https://github.com/meabhaykr/EDA-Hotel-Booking-Analysis">Hotel Bookings Analysis Using Excel</a></h3>
+			  <p>Analyzed hotel bookings with Excel, created pivot tables, and developed a data dashboard.</p>
 			</div>
 		  </div>
 		</div>
@@ -561,19 +563,19 @@
         </div>
 	<br>
 		<!-- added justify-content-center to center align the last two projects -->
-		<!-- <div class="row d-flex justify-content-center">  
+		<div class="row d-flex justify-content-center">  
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://public.tableau.com/app/profile/abhay.kumar/viz/HotelBookings_16950469340750/DashboardHotelBookingAnalysisDashboard" class="block-20 zoom-effect" style="background-image: url('images/proj_7.png');">
+				<a href="https://github.com/meabhaykr/EDA-Hotel-Booking-Analysis" class="block-20 zoom-effect" style="background-image: url('images/proj_13.jpg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://public.tableau.com/app/profile/abhay.kumar/viz/HotelBookings_16950469340750/DashboardHotelBookingAnalysisDashboard">Hotel Booking Analysis Using Tableau</a></h3>
-				  <p>Used multiple machine learning models to forecast sales (retail store) and performed time series analysis.</p>
+				  <h3 class="heading"><a href="https://github.com/meabhaykr/EDA-Hotel-Booking-Analysis">EDA - Hotel Booking Analysis</a></h3>
+				  <p>Explore hotel booking trends, preferences, and factors influencing bookings through thorough EDA and visualizations.</p>
 				</div>
 			  </div>
 			</div>
-			<div class="col-md-4 d-flex ftco-animate">
+			<!-- <div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
 				<a href="https://public.tableau.com/app/profile/abhay.kumar/viz/CFSANDashborad_17055992205320/Dashboard" class="block-20 zoom-effect" style="background-image: url('images/proj_8.png');">
 				</a>
@@ -584,6 +586,11 @@
 				</div>
 			  </div>
 			</div> -->
+
+
+
+
+
 		 </div>
 	  </div>
     </section>
@@ -610,12 +617,12 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="100">0 <span>+</span></strong>
+                <strong class="number" data-number="100">0</strong>
                 <span>Certificates</span>
               </div>
             </div>
           </div>
-<!--           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
+          <!-- <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
                 <strong class="number" data-number="500">0</strong>
@@ -724,7 +731,7 @@
 			<div class="col-md-12 text-center">
   
 			  <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-	Copyright @ <a href="https://meabhaykr.github.com" target="_blank">ABHAY KUMAR</a> <!-- &copy;<script>document.write(new Date().getFullYear());</script> abhaykumar.github.com | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://www.infofriendly.com" target="_blank">INFOFRIENDLY</a> -->
+	Copyright @ <a href="https://meabhaykr.github.io/" target="_blank">ABHAY KUMAR</a> <!-- &copy;<script>document.write(new Date().getFullYear());</script> abhaykumar.github.com | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://www.infofriendly.com" target="_blank">INFOFRIENDLY</a> -->
 	<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 			</div>
 		  </div>
