--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://0101010101">+ 91 9475610892</a></p>
+	            <p><a href="tel://+ 91 9475610892">+ 91 9475610892</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
