--- a/index.html
+++ b/index.html
@@ -577,11 +577,11 @@
 			</div>
 			<!-- <div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://public.tableau.com/app/profile/abhay.kumar/viz/CFSANDashborad_17055992205320/Dashboard" class="block-20 zoom-effect" style="background-image: url('images/proj_8.png');">
+				<a href="https://github.com/meabhaykr/raksha_pipes_assignment" class="block-20 zoom-effect" style="background-image: url('images/proj_14.png');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://public.tableau.com/app/profile/abhay.kumar/viz/CFSANDashborad_17055992205320/Dashboard">Adverse Event Reporting in the Food and Cosmetics Industry using Tableau</a></h3>
+				  <h3 class="heading"><a href="https://github.com/meabhaykr/raksha_pipes_assignment">Adverse Event Reporting in the Food and Cosmetics Industry using Tableau</a></h3>
 				  <p>Developed a ML model to give various recommendations of financial products &amp; services on target customer groups.</p>
 				</div>
 			  </div>
