--- a/index.html
+++ b/index.html
@@ -575,17 +575,17 @@
 				</div>
 			  </div>
 			</div>
-			<!-- <div class="col-md-4 d-flex ftco-animate">
+			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
 				<a href="https://github.com/meabhaykr/raksha_pipes_assignment" class="block-20 zoom-effect" style="background-image: url('images/proj_14.png');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/meabhaykr/raksha_pipes_assignment">Adverse Event Reporting in the Food and Cosmetics Industry using Tableau</a></h3>
-				  <p>Developed a ML model to give various recommendations of financial products &amp; services on target customer groups.</p>
+				  <h3 class="heading"><a href="https://github.com/meabhaykr/raksha_pipes_assignment">Raksha Pipes - Business Analyst</a></h3>
+				  <p>The system integrates Python, MySQL, and Power BI for data generation, storage, visualization, and informed decision-making.</p>
 				</div>
 			  </div>
-			</div> -->
+			</div>
 
 
 
