--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-			<p><a href="https://drive.google.com/drive/folders/13mQkpU_aC25bbgiUfrAayoRl0_kzW0ty?usp=sharing">DOWNLOAD</a></p>
+			<p><a href="https://drive.google.com/file/d/18HNxNIukhvqiHEY55m7oIfbR-dwbqTBp/view?usp=sharing">DOWNLOAD</a></p>
 
 
 			<!-- <p>Update Soon</p> -->
@@ -393,7 +393,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/drive/folders/13mQkpU_aC25bbgiUfrAayoRl0_kzW0ty?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://drive.google.com/file/d/18HNxNIukhvqiHEY55m7oIfbR-dwbqTBp/view?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -694,7 +694,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/drive/folders/13mQkpU_aC25bbgiUfrAayoRl0_kzW0ty?usp=sharing">Resume link</a></p>
+	            <p><a href="https://drive.google.com/file/d/18HNxNIukhvqiHEY55m7oIfbR-dwbqTBp/view?usp=sharing>Resume link</a></p>
 	          </div>
           </div>
 
