--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/18HNxNIukhvqiHEY55m7oIfbR-dwbqTBp/view?usp=sharing>Resume link</a></p>
+	            <p><a href="https://drive.google.com/file/d/18HNxNIukhvqiHEY55m7oIfbR-dwbqTBp/view?usp=sharing">Resume link</a></p>
 	          </div>
           </div>
 
